fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Attended_for_EZIO__c.field-meta.xml
<CustomField>
    <fullName>Attended_for_EZIO__c</fullName>
    <label>Attended EZIO</label>
    <summaryFilterItems>
        <field>Lab_Participant__c.Status_for_EZIO__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Lab_Participant__c.Lab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>