fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/auto_approve_all_Attendees__c.field-meta.xml
<CustomField>
    <fullName>auto_approve_all_Attendees__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this box on the lab will auto approve all attendees.</description>
    <inlineHelpText>Checking this box on the lab will auto approve all attendees and bypass the approval process. Email notifications regarding acceptance to the lab will not be sent to the lab participants for labs where this is checked.</inlineHelpText>
    <label>Auto Approve All Attendees</label>
    <type>Checkbox</type>
</CustomField>