fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Lab</relationshipLabel>
    <relationshipName>Lab</relationshipName>
    <type>Lookup</type>
</CustomField>