fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Default_Approver__c.field-meta.xml
<CustomField>
    <fullName>Default_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this is selected all Lab Participant Approvals will be assigned to this user.</inlineHelpText>
    <label>Approver Override</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lab</relationshipName>
    <type>Lookup</type>
</CustomField>