fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Lab_Date__c.field-meta.xml
<CustomField>
    <fullName>Lab_Date__c</fullName>
    <label>Lab Date</label>
    <type>Date</type>
</CustomField>