fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Lab_Eval_Name__c.field-meta.xml
<CustomField>
    <fullName>Lab_Eval_Name__c</fullName>
    <formula>SUBSTITUTE(Name, &quot;,&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lab Eval Name</label>
    <type>Text</type>
</CustomField>