fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Lab_Key__c.field-meta.xml
<CustomField>
    <fullName>Lab_Key__c</fullName>
    <externalId>true</externalId>
    <label>Lab Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>