fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Name_to_use_in_Template__c.field-meta.xml
<CustomField>
    <fullName>Name_to_use_in_Template__c</fullName>
    <label>Name to use in Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>