fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Total_of_Participants_Hemorrhage__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Participants_Hemorrhage__c</fullName>
    <formula>Total_Participants_Hemorrhage__c+Walkin_Hemorrhage__c</formula>
    <label>Total #of Participants Hemorrhage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>