fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Total_of_Participants_Interventional__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Participants_Interventional__c</fullName>
    <formula>Total_Participants_Interventional__c+Walkin_Interventional__c</formula>
    <label>Total# of Participants Interventional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>