fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/TP_Range_c__c.field-meta.xml
<CustomField>
    <fullName>TP_Range_c__c</fullName>
    <label>TP Range C</label>
    <summaryFilterItems>
        <field>Lab_Participant__c.Target_Profile_TP_Range__c</field>
        <operation>equals</operation>
        <value>C</value>
    </summaryFilterItems>
    <summaryForeignKey>Lab_Participant__c.Lab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>