fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Walkin_EZ_IO__c.field-meta.xml
<CustomField>
    <fullName>Walkin_EZ_IO__c</fullName>
    <description>EZ-IO walked in Participants</description>
    <inlineHelpText>EZ-IO walked in Participants</inlineHelpText>
    <label>Walkin EZ-IO</label>
    <summaryFilterItems>
        <field>Lab_Participant__c.Walkin_EZ_IO__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Lab_Participant__c.Lab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>