fullSandbox11072023/force-app/main/default/objects/Lab__c/fields/Walkin_Interventional__c.field-meta.xml
<CustomField>
    <fullName>Walkin_Interventional__c</fullName>
    <label>Walkin Interventional</label>
    <summaryFilterItems>
        <field>Lab_Participant__c.Walkin_Interventional__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Lab_Participant__c.Lab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>