fullSandbox11072023/force-app/main/default/objects/Lab__c/listViews/Active_Labs.listView-meta.xml
<ListView>
    <fullName>Active_Labs</fullName>
    <columns>NAME</columns>
    <columns>Total_Participants__c</columns>
    <columns>Approved_for_EZIO__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Labs</label>
</ListView>