fullSandbox11072023/force-app/main/default/objects/Lab__c/listViews/All_Labs_All_Time.listView-meta.xml
<ListView>
    <fullName>All_Labs_All_Time</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Campaign__c</columns>
    <columns>Total_Participants__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Labs All Time</label>
    <language>en_US</language>
</ListView>