fullSandbox11072023/force-app/main/default/objects/Lab__c/listViews/Completed_Labs_2.listView-meta.xml
<ListView>
    <fullName>Completed_Labs_2</fullName>
    <columns>NAME</columns>
    <columns>Total_Participants__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Labs All Time</label>
    <language>en_US</language>
</ListView>