fullSandbox11072023/force-app/main/default/objects/Lab__c/listViews/X2017_Labs2.listView-meta.xml
<ListView>
    <fullName>X2017_Labs2</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Campaign__c</columns>
    <columns>Total_Participants__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2017</value>
    </filters>
    <label>2017 Labs</label>
    <language>en_US</language>
</ListView>