fullSandbox11072023/force-app/main/default/objects/Lab__c/listViews/X2018_All_Labs2.listView-meta.xml
<ListView>
    <fullName>X2018_All_Labs2</fullName>
    <columns>NAME</columns>
    <columns>Lab_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Campaign__c</columns>
    <columns>Total_Participants__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2018</value>
    </filters>
    <label>2018 All Labs</label>
</ListView>