fullSandbox11072023/force-app/main/default/objects/Lab__c/listViews/x2018_Completed_Labs.listView-meta.xml
<ListView>
    <fullName>x2018_Completed_Labs</fullName>
    <columns>NAME</columns>
    <columns>Total_Participants__c</columns>
    <columns>Status__c</columns>
    <columns>Lab_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2018</value>
    </filters>
    <label>2018 Completed Labs</label>
</ListView>